# vSet

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_windows.ps1  vcpkg.json
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h  Style.cpp  Style.h
src/audio/: AutoMixController.cpp  AutoMixController.h  DeckController.cpp  DeckController.h
src/model/: SetPlan.cpp  SetPlan.h  TrackItem.h
src/services/: OpenAiService.cpp  OpenAiService.h  SettingsService.cpp  SettingsService.h  YouTubeService.cpp  YouTubeService.h
src/widgets/: DeckWidget.cpp  DeckWidget.h  MixerWidget.cpp  MixerWidget.h  PlaylistWidget.cpp  PlaylistWidget.h  SetBuilderPanel.cpp  SetBuilderPanel.h  SettingsDialog.cpp  SettingsDialog.h  YouTubePanel.cpp  YouTubePanel.h
